--- a/addons/ccm-gcp/ccm-gcp.yaml
+++ b/addons/ccm-gcp/ccm-gcp.yaml
@@ -306,6 +306,7 @@ spec:
         kubeone.k8c.io/credentials-hash: '{{ .CredentialsCCMHash }}'
       labels:
         component: cloud-controller-manager
+        k8s-app: gce-cloud-controller-manager
         tier: control-plane
     spec:
       affinity:
