Add missing E2E tests
Signed-off-by: Marko Mudrinić <mudrinic.mare@gmail.com>

--- a/test/tests.yml
+++ b/test/tests.yml
@@ -164,7 +164,7 @@
     - name: equinixmetal_default_stable
     - name: equinixmetal_flatcar_stable
     - name: equinixmetal_rockylinux_stable
-    - name: gce_default
+    - name: gce_default_stable
     - name: hetzner_centos_stable
     - name: hetzner_default_stable
     - name: hetzner_rockylinux_stable
@@ -586,6 +586,40 @@
     - name: vsphere_default
     - name: vsphere_flatcar
 
+- scenario: legacy_machine_controller_containerd_external
+  initVersion: v1.29.2
+  infrastructures:
+    - name: aws_amzn
+    - name: aws_centos
+    - name: aws_default
+    - name: aws_flatcar
+    - name: aws_rhel
+    - name: aws_rockylinux
+    - name: azure_centos
+    - name: azure_default
+    - name: azure_flatcar
+    - name: azure_rhel
+    - name: azure_rockylinux
+    - name: digitalocean_centos
+    - name: digitalocean_default
+    - name: digitalocean_rockylinux
+    - name: equinixmetal_centos
+    - name: equinixmetal_default
+    - name: equinixmetal_flatcar
+    - name: equinixmetal_rockylinux
+    - name: gce_default
+    - name: hetzner_centos
+    - name: hetzner_default
+    - name: hetzner_rockylinux
+    - name: openstack_centos
+    - name: openstack_default
+    - name: openstack_flatcar
+    - name: openstack_rhel
+    - name: openstack_rockylinux
+    - name: vsphere_centos
+    - name: vsphere_default
+    - name: vsphere_flatcar
+
 #####################
 # CSI CCM MIGRATION #
 #####################
@@ -593,11 +627,19 @@
 - scenario: csi_ccm_migration
   initVersion: v1.27.11
   infrastructures:
+    - name: azure_centos
     - name: azure_default
+    - name: azure_flatcar
+    - name: azure_rhel
+    - name: azure_rockylinux
     - name: gce_default
 
 - scenario: csi_ccm_migration
   initVersion: v1.28.7
   infrastructures:
+    - name: azure_centos
     - name: azure_default
+    - name: azure_flatcar
+    - name: azure_rhel
+    - name: azure_rockylinux
     - name: gce_default
