Fix GCE in-tree upgrade test
Signed-off-by: Marko Mudrinić <mudrinic.mare@gmail.com>

--- a/test/tests.yml
+++ b/test/tests.yml
@@ -140,7 +140,7 @@
     - name: azure_flatcar_stable
     - name: azure_rhel_stable
     - name: azure_rockylinux_stable
-    - name: gce_default
+    - name: gce_default_stable
 
 - scenario: upgrade_containerd_external
   initVersion: v1.27.11
