--- a/test/tests.yml
+++ b/test/tests.yml
@@ -180,37 +180,38 @@
 - scenario: upgrade_containerd_external
   initVersion: v1.28.7
   upgradedVersion: v1.29.2
+  initKubeOneVersion: "main"
   infrastructures:
-    - name: aws_amzn
-    - name: aws_centos
-    - name: aws_default
-    - name: aws_flatcar
-    - name: aws_rhel
-    - name: aws_rockylinux
-    - name: azure_centos
-    - name: azure_default
-    - name: azure_flatcar
-    - name: azure_rhel
-    - name: azure_rockylinux
-    - name: digitalocean_centos
-    - name: digitalocean_default
-    - name: digitalocean_rockylinux
-    - name: equinixmetal_centos
-    - name: equinixmetal_default
-    - name: equinixmetal_flatcar
-    - name: equinixmetal_rockylinux
-    - name: gce_default
-    - name: hetzner_centos
-    - name: hetzner_default
-    - name: hetzner_rockylinux
-    - name: openstack_centos
-    - name: openstack_default
-    - name: openstack_flatcar
-    - name: openstack_rhel
-    - name: openstack_rockylinux
-    - name: vsphere_centos
-    - name: vsphere_default
-    - name: vsphere_flatcar
+    - name: aws_amzn_stable
+    - name: aws_centos_stable
+    - name: aws_default_stable
+    - name: aws_flatcar_stable
+    - name: aws_rhel_stable
+    - name: aws_rockylinux_stable
+    - name: azure_centos_stable
+    - name: azure_default_stable
+    - name: azure_flatcar_stable
+    - name: azure_rhel_stable
+    - name: azure_rockylinux_stable
+    - name: digitalocean_centos_stable
+    - name: digitalocean_default_stable
+    - name: digitalocean_rockylinux_stable
+    - name: equinixmetal_centos_stable
+    - name: equinixmetal_default_stable
+    - name: equinixmetal_flatcar_stable
+    - name: equinixmetal_rockylinux_stable
+    - name: gce_default_stable
+    - name: hetzner_centos_stable
+    - name: hetzner_default_stable
+    - name: hetzner_rockylinux_stable
+    - name: openstack_centos_stable
+    - name: openstack_default_stable
+    - name: openstack_flatcar_stable
+    - name: openstack_rhel_stable
+    - name: openstack_rockylinux_stable
+    - name: vsphere_centos_stable
+    - name: vsphere_default_stable
+    - name: vsphere_flatcar_stable
 
 ###########################
 # ALTERNATIVE CNI PLUGINS #
@@ -424,71 +425,72 @@
   initVersion: v1.27.11
   upgradedVersion: v1.28.7
   infrastructures:
-    - name: aws_amzn
-    - name: aws_centos
-    - name: aws_default
-    - name: aws_flatcar
-    - name: aws_rhel
-    - name: aws_rockylinux
-    - name: azure_centos
-    - name: azure_default
-    - name: azure_flatcar
-    - name: azure_rhel
-    - name: azure_rockylinux
-    - name: digitalocean_centos
-    - name: digitalocean_default
-    - name: digitalocean_rockylinux
-    - name: equinixmetal_centos
-    - name: equinixmetal_default
-    - name: equinixmetal_flatcar
-    - name: equinixmetal_rockylinux
-    - name: gce_default
-    - name: hetzner_centos
-    - name: hetzner_default
-    - name: hetzner_rockylinux
-    - name: openstack_centos
-    - name: openstack_default
-    - name: openstack_flatcar
-    - name: openstack_rhel
-    - name: openstack_rockylinux
-    - name: vsphere_centos
-    - name: vsphere_default
-    - name: vsphere_flatcar
+    - name: aws_amzn_stable
+    - name: aws_centos_stable
+    - name: aws_default_stable
+    - name: aws_flatcar_stable
+    - name: aws_rhel_stable
+    - name: aws_rockylinux_stable
+    - name: azure_centos_stable
+    - name: azure_default_stable
+    - name: azure_flatcar_stable
+    - name: azure_rhel_stable
+    - name: azure_rockylinux_stable
+    - name: digitalocean_centos_stable
+    - name: digitalocean_default_stable
+    - name: digitalocean_rockylinux_stable
+    - name: equinixmetal_centos_stable
+    - name: equinixmetal_default_stable
+    - name: equinixmetal_flatcar_stable
+    - name: equinixmetal_rockylinux_stable
+    - name: gce_default_stable
+    - name: hetzner_centos_stable
+    - name: hetzner_default_stable
+    - name: hetzner_rockylinux_stable
+    - name: openstack_centos_stable
+    - name: openstack_default_stable
+    - name: openstack_flatcar_stable
+    - name: openstack_rhel_stable
+    - name: openstack_rockylinux_stable
+    - name: vsphere_centos_stable
+    - name: vsphere_default_stable
+    - name: vsphere_flatcar_stable
 
 - scenario: upgrade_cilium_containerd_external
   initVersion: v1.28.7
   upgradedVersion: v1.29.2
+  initKubeOneVersion: "main"
   infrastructures:
-    - name: aws_amzn
-    - name: aws_centos
-    - name: aws_default
-    - name: aws_flatcar
-    - name: aws_rhel
-    - name: aws_rockylinux
-    - name: azure_centos
-    - name: azure_default
-    - name: azure_flatcar
-    - name: azure_rhel
-    - name: azure_rockylinux
-    - name: digitalocean_centos
-    - name: digitalocean_default
-    - name: digitalocean_rockylinux
-    - name: equinixmetal_centos
-    - name: equinixmetal_default
-    - name: equinixmetal_flatcar
-    - name: equinixmetal_rockylinux
-    - name: gce_default
-    - name: hetzner_centos
-    - name: hetzner_default
-    - name: hetzner_rockylinux
-    - name: openstack_centos
-    - name: openstack_default
-    - name: openstack_flatcar
-    - name: openstack_rhel
-    - name: openstack_rockylinux
-    - name: vsphere_centos
-    - name: vsphere_default
-    - name: vsphere_flatcar
+    - name: aws_amzn_stable
+    - name: aws_centos_stable
+    - name: aws_default_stable
+    - name: aws_flatcar_stable
+    - name: aws_rhel_stable
+    - name: aws_rockylinux_stable
+    - name: azure_centos_stable
+    - name: azure_default_stable
+    - name: azure_flatcar_stable
+    - name: azure_rhel_stable
+    - name: azure_rockylinux_stable
+    - name: digitalocean_centos_stable
+    - name: digitalocean_default_stable
+    - name: digitalocean_rockylinux_stable
+    - name: equinixmetal_centos_stable
+    - name: equinixmetal_default_stable
+    - name: equinixmetal_flatcar_stable
+    - name: equinixmetal_rockylinux_stable
+    - name: gce_default_stable
+    - name: hetzner_centos_stable
+    - name: hetzner_default_stable
+    - name: hetzner_rockylinux_stable
+    - name: openstack_centos_stable
+    - name: openstack_default_stable
+    - name: openstack_flatcar_stable
+    - name: openstack_rhel_stable
+    - name: openstack_rockylinux_stable
+    - name: vsphere_centos_stable
+    - name: vsphere_default_stable
+    - name: vsphere_flatcar_stable
 
 ####################
 # CONFORMANCE TEST #
